# VVChat

./: CMakeLists.txt  ListViewData.cpp  ListViewData.h  ListViewData.hpp  README.md  config.ini  flushinfo.cpp  flushinfo.h  fontmodel.cpp  fontmodel.h  fontmodel.ui  itemdelegate.cpp  itemdelegate.h  main.cpp  mainui.cpp  mainui.h  mainui.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  signin.cpp  signin.h  signin.ui  signup.cpp  signup.h  signup.ui  tcpclient.cpp  tcpclient.h  tcpclient.ui  tcpconnect.cpp  tcpconnect.h  tcpserver.cpp  tcpserver.h  tcpserver.ui  user.cpp  user.h  userlistmodel.cpp  userlistmodel.h
Server/: test.cpp
Server/include/: public.hpp
Server/include/server/: ChatService.hpp
Server/include/server/model/: FriendModel.hpp  UserModel.hpp
Server/include/server/other/: randomAccountGenerator.hpp
Server/src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp
Server/src/server/model/: FriendModel.cpp  GroupModel.cpp  UserModel.cpp
Server/src/server/other/: randomAccountGenerator.cpp
Server/src/testAI/: CMakeLists.txt  aitest.cpp
msg/: .ini
msg/0/: 032553546646799.ini
msg/09779399008/: 6.ini
msg/3033/: 032553546646799.ini
msg/6/: 032553546646799.ini  1.ini  677.ini
msg/677/: 032553546646799.ini  6.ini  845150606622906.ini
server/chatServer/: mysqlconfig.ini
server/chatServer/include/: public.hpp
server/chatServer/include/server/: ChatService.hpp
server/chatServer/include/server/model/: GroupModel.hpp
server/chatServer/include/server/other/: randomAccountGenerator.hpp
server/chatServer/src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp
server/chatServer/src/server/model/: FriendModel.cpp  (+3 more)
server/include/: public.hpp
server/include/server/: ChatService.hpp
server/include/server/model/: ALLGroup.hpp  OfflineMessageModel.hpp  User.hpp
server/src/: CMakeLists.txt
server/src/server/: ChatService.cpp
server/src/server/model/: GroupModel.cpp  UserModel.cpp
server/src/server/other/: randomAccountGenerator.cpp
(+4 files in other folders)
